# nix-eval-server

./: README.md  flake.nix  meson.build
.github/workflows/: ci.yml
packaging/: components.nix  dependencies.nix  dev-shell.nix
src/libflake/flake/: flake.cc  flake.hh
src/nix-eval-server/: capnproto_build.sh  main.cc  meson.build  nix-eval-server.capnp  nix-eval-server.proto  package.nix
